--- a/src/theme/style.scss
+++ b/src/theme/style.scss
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import "~antd/dist/antd.css";
+@import '~antd/dist/antd.css';
 @import 'base';
 @import 'utils';
 @import 'globals';
