--- a/src/theme/_globals.scss
+++ b/src/theme/_globals.scss
@@ -383,7 +383,7 @@ body {
         @apply absolute bottom-4 right-4;
       }
       .collection_name {
-        @apply px-2 text-xs sm:text-tiny font-medium bg-gradient-to-r from-yellow-500 via-red-500 to-pink-500;
+        @apply text-xs sm:text-tiny font-medium;
       }
       .token_id {
         @apply text-tiny;
@@ -945,7 +945,7 @@ button.tertiary {
       .token-uid {
         @apply flex;
         span {
-          @apply p-1 rounded-lg text-white text-xs bg-gradient-to-r from-yellow-400 via-red-500 to-pink-500;
+          @apply p-2 rounded-lg text-black dark:text-white text-xs bg-gray-100 dark:bg-gray-800 font-medium;
         }
       }
       .redeemable {
