fix style: offer-card z-index

--- a/src/theme/_globals.scss
+++ b/src/theme/_globals.scss
@@ -1324,7 +1324,7 @@ input[type='range']::-moz-range-thumb {
 // Offer Cards
 
 .offer-card {
-  @apply p-4  sm:rounded-2xl shadow-xl text-center fixed bottom-0 sm:relative w-full left-0 right-0;
+  @apply p-4  sm:rounded-2xl shadow-xl text-center fixed bottom-0 sm:relative w-full left-0 right-0 z-10;
   @apply bg-white bg-opacity-80 sm:bg-opacity-100;
   @apply dark:bg-gray-900 dark:sm:bg-gray-800 dark:bg-opacity-80 dark:sm:bg-opacity-100;
   @extend .backdrop-blur;
