--- a/src/theme/list-orders.scss
+++ b/src/theme/list-orders.scss
@@ -66,16 +66,16 @@
     @apply mt-3 lg:mt-0 md:col-span-8 lg:col-span-7;
     dl {
       @apply grid grid-cols-2 gap-x-3 md:gap-x-12 text-xs tracking-tight md:tracking-normal;
+      @apply text-xxs sm:text-xs;
     }
   }
   li .info dl > div > dt {
     @apply font-medium text-gray-900;
-    @apply dark:text-gray-100;
+    @apply dark:text-gray-100 text-left;
   }
   li .info dl > div > dd {
     @apply mt-1 text-gray-500 leading-tight;
-    @apply dark:text-gray-400;
-    @apply text-xxs sm:text-xs;
+    @apply dark:text-gray-400 text-right;
   }
   li .info dl > div > dd > div {
     @apply flex justify-between;
